--- a/win.html
+++ b/win.html
@@ -1,3 +1,3 @@
 <html>
-<head><meta http-equiv="refresh" content="0;url=https://ayong007.gitee.io/ayong/win.htm"></head>
+<head><meta http-equiv="refresh" content="0;url=http://win.gxzyzd.com"></head>
 </html>
