--- a/ios.html
+++ b/ios.html
@@ -1,3 +1,3 @@
 <html>
-<head><meta http-equiv="refresh" content="0;url=https://ayong007.gitee.io/ayong/ios.html"></head>
+<head><meta http-equiv="refresh" content="0;url=http://ios.gxzyzd.com"></head>
 </html>
