--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <i class="fab fa-apple black"></i>
 </div>ios板块</a></div>
 
-<div class="col s4"><a href="./android.html"><div class="icon">
+<div class="col s4"><a href="https://www.lanzous.com/i56i3jg"><div class="icon">
 <i class="fab fa-android green"></i>
 </div>安卓软件</a></div>
 
